--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ dist: trusty
 before_install:
 
   - make
+  - sudo apt-get install -y python3-maas-client
 
 script:
   - docker network create --subnet=192.168.1.0/24 net1
