--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,14 @@
 ---
 language: python
-python: "2.7"
+python: "3.5"
 sudo: required
 dist: trusty
 
 before_install:
-
-  - make
+  - sudo add-apt-repository -y ppa:maas/stable
+  - sudo apt-get update
   - sudo apt-get install -y python3-maas-client
+  - make
 
 script:
   - docker network create --subnet=192.168.1.0/24 net1
