--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ sudo: required
 dist: trusty
 
 before_install:
+  - sudo apt-get install -y debian-keyring debian-archive-keyring
   - sudo add-apt-repository -y ppa:maas/stable
   - sudo apt-get update
   - sudo apt-get install -y python3-maas-client
