--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 ---
 language: python
-python: "3.5"
+python: "2.7"
 sudo: required
 dist: trusty
 
@@ -8,7 +8,7 @@ before_install:
   - sudo apt-get install -y debian-keyring debian-archive-keyring
   - sudo add-apt-repository -y ppa:maas/stable
   - sudo apt-get update
-  - sudo apt-get install -y python3-maas-client
+  - sudo apt-get install -y python-maas-client
   - make
 
 script:
