--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,12 @@ sudo: required
 dist: trusty
 
 before_install:
+  - docker --version
   - sudo apt-get install -y debian-keyring debian-archive-keyring
   - sudo add-apt-repository -y ppa:maas/stable
   - sudo apt-get update
-  - sudo apt-get install -y python-maas-client
+  - sudo apt-get install -y python-maas-client docker-engine
+  - docker --version
   - make
 
 script:
