--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,9 @@ sudo: required
 dist: trusty
 
 before_install:
-  - sudo apt-get install -y debian-keyring debian-archive-keyring
-  - sudo add-apt-repository -y ppa:maas/stable
   - sudo apt-get update
-  - sudo apt-get install -o Dpkg::Options::="--force-confold" --force-yes -y python-maas-client docker-engine
+  - sudo apt-get install -o Dpkg::Options::="--force-confold" --force-yes -y docker-engine
+  - sudo pip install https://github.com/mvdbeek/maasclient/archive/master.zip
   - make
 
 script:
